games/minetest/0.0.25/CHANGELOG.md
# Changelog<br>


<a name="minetest-0.0.25"></a>
### [minetest-0.0.25](https://github.com/truecharts/apps/compare/minetest-0.0.24...minetest-0.0.25) (2022-03-02)

#### Chore

* rename `web_portal` to `open` ([#1957](https://github.com/truecharts/apps/issues/1957))
* update helm chart common to v8.17.2 ([#1965](https://github.com/truecharts/apps/issues/1965))



<a name="minetest-0.0.24"></a>
### [minetest-0.0.24](https://github.com/truecharts/apps/compare/minetest-0.0.23...minetest-0.0.24) (2022-02-22)

#### Chore

* update helm chart common to v8.16.1 ([#1940](https://github.com/truecharts/apps/issues/1940))



<a name="minetest-0.0.23"></a>
### [minetest-0.0.23](https://github.com/truecharts/apps/compare/minetest-0.0.22...minetest-0.0.23) (2022-02-22)

#### Chore

* update helm chart common to v8.16.0 ([#1925](https://github.com/truecharts/apps/issues/1925))



<a name="minetest-0.0.22"></a>
### [minetest-0.0.22](https://github.com/truecharts/apps/compare/minetest-0.0.21...minetest-0.0.22) (2022-02-16)

#### Chore

* update helm chart common to v8.15.4 ([#1879](https://github.com/truecharts/apps/issues/1879))



<a name="minetest-0.0.21"></a>
### [minetest-0.0.21](https://github.com/truecharts/apps/compare/minetest-0.0.20...minetest-0.0.21) (2022-02-10)



<a name="minetest-0.0.20"></a>
### [minetest-0.0.20](https://github.com/truecharts/apps/compare/minetest-0.0.19...minetest-0.0.20) (2022-02-08)

#### Chore

* update helm general non-major helm releases ([#1871](https://github.com/truecharts/apps/issues/1871))



<a name="minetest-0.0.19"></a>
### [minetest-0.0.19](https://github.com/truecharts/apps/compare/minetest-0.0.18...minetest-0.0.19) (2022-02-06)

#### Chore

* update helm chart common to v8.15.0 ([#1859](https://github.com/truecharts/apps/issues/1859))



<a name="minetest-0.0.18"></a>
### [minetest-0.0.18](https://github.com/truecharts/apps/compare/minetest-0.0.17...minetest-0.0.18) (2022-02-05)

#### Chore

* update helm general non-major helm releases ([#1852](https://github.com/truecharts/apps/issues/1852))



<a name="minetest-0.0.17"></a>
### [minetest-0.0.17](https://github.com/truecharts/apps/compare/minetest-0.0.16...minetest-0.0.17) (2022-02-02)

#### Chore

* update helm general non-major helm releases ([#1828](https://github.com/truecharts/apps/issues/1828))



<a name="minetest-0.0.16"></a>
### [minetest-0.0.16](https://github.com/truecharts/apps/compare/minetest-0.0.15...minetest-0.0.16) (2022-01-25)

#### Chore

* update helm general non-major helm releases ([#1791](https://github.com/truecharts/apps/issues/1791))



<a name="minetest-0.0.15"></a>
### [minetest-0.0.15](https://github.com/truecharts/apps/compare/minetest-0.0.14...minetest-0.0.15) (2022-01-22)

#### Chore

* update helm general non-major helm releases ([#1766](https://github.com/truecharts/apps/issues/1766))



